<resources>
    <string name="app_name">PassManager</string>
    <string name="msg_insert_master_pass">Introdu parola master</string>
    <string name="auth">Autentifică-te</string>
    <string name="invalid_pass">Parolă master invalidă!</string>
    <string name="create_new_database_short">Creează o nouă bază</string>
    <string name="create_new_database">Creează o nouă bază de date</string>
    <string name="first_pass_master">Alege o parolă master</string>
    <string name="second_pass_master">Introdu din nou parola</string>
    <string name="create_database">Creează</string>
    <string name="passwords_not_matching">Parolele nu se potrivesc!</string>
    <string name="title_activity_entries_menu">Meniu principal</string>
    <string name="entries_label">Înregistrări</string>
    <string name="username_prompt">Nume de utilizator/E-mail</string>
    <string name="password_prompt">Parola</string>
    <string name="password_encrypted_prompt">Parola (criptată)</string>
    <string name="password_decrypted_prompt">Parola</string>
    <string name="description_prompt">Descriere</string>
    <string name="link_prompt">Link</string>
    <string name="entry_name_prompt">Denumire</string>
    <string name="dialog_close">Închide</string>
    <string name="dialog_enter_password">Introdu parola master</string>
    <string name="invalid_master_password">Parolă master invalidă!</string>
    <string name="user_pass_decrypted">Parolă decriptată cu succes!</string>
    <string name="delete">Șterge</string>
    <string name="entry_deleted">Înregistrarea a fost ștearsă.</string>
    <string name="generate_password">Generează parolă</string>
    <string name="save_entry">Salvează</string>
    <string name="decrypt_password">Decriptează parola</string>
    <string name="last_modified">Ultima modificare</string>
    <string name="modify_entry">Modifică</string>
    <string name="decrypt_password_first">Parola trebuie decriptată mai întâi!</string>
    <string name="password_not_strong">Atenție! Parola nu este suficient de puternică!</string>
    <string name="copy_password">Copiază parola</string>
    <string name="placeholder_password">Aici este parola</string>
    <string name="password_copied">Parolă copiată!</string>
    <string name="placeholder_username">numeutilizator</string>
    <string name="add_entry">Adaugă o înregistrare</string>
    <string name="copy_user">Copiază numele</string>
    <string name="user_copied">Nume utilizator copiat!</string>
    <string name="label_user_password">User Password</string>
    <string name="password_type">Tip parolă:</string>
    <string name="text_password">Text</string>
    <string name="pin_password">PIN</string>
    <string name="lower_alpha">Litere mici</string>
    <string name="upper_alpha">Litere mari</string>
    <string name="digits">Cifre</string>
    <string name="special_characters">Special</string>
    <string name="choose_character_set">Trebuie selectat cel puțin un set de caractere!</string>
    <string name="category_icon">Iconiță categorie</string>
    <string name="choose_icon">Alege o iconiță</string>
    <string name="category_name">Denumirea categoriei</string>
    <string name="save_category">Salvează</string>
    <string name="add_category">Adaugă o categorie nouă</string>
    <string name="modify_master_pass">Modifică parola master</string>
    <string name="enter_current_master_pass">Introdu parola master curentă</string>
    <string name="enter_new_master_pass">Introdu noua parolă master</string>
    <string name="preference_file">com.example.passmanager.preferences</string>
    <string name="encrypted_master_key">encrypted_master</string>
    <string name="modify">Modifică</string>
    <string name="master_pass_modified">Parolă master modificată!</string>
    <string name="expand">Expand</string>
    <string name="database_deleted">Din cauza încercărilor eșuate, baza de date cu toate
        înregistrările a fost ștearsă!</string>
    <string name="attempts_left">Încercări rămase: </string>
    <string name="last_attempt_key">last_attempt_key</string>
    <string name="login_attempts_left_key">login_attempts_left</string>
    <string name="verify_password_data_breach">Verifică parola</string>
    <string name="pass_found_in_data_breach">Parola este compromisă!</string>
    <string name="pass_not_found_in_data_breach">Parola nu a fost gasită într-o bază de date
        compromisă.</string>
    <string name="short_add_category">Add categ</string>
    <string name="short_change_master_pass">Change master</string>
    <string name="modify_category">Modifică categoria</string>
    <string name="delete_category">Șterge categoria</string>
    <string name="delete_category_format">Sigur vrei să ștergi categoria %s ? Toate
        înregistrările asociate vor fi mutate în categoria Others.</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>
    <string name="cannot_delete_category">Nu poți șterge această categorie.</string>
    <string name="category_selected">Categorie selectată</string>
    <string name="exception_db_not_present">Baza de date nu există!</string>
    <string name="google_authentication_failed">\"Autentificare eșuată Google \"</string>
    <string name="save_database_google_drive">Salvează baza de date pe Google Drive</string>
    <string name="download_database_google_drive">Descarcă baza de date de pe Google Drive</string>
    <string name="more">Mai multe</string>
    <string name="change_master_password">Schimbă parola master</string>
    <string name="add_new_category">Adaugă o categorie</string>
    <string name="close">Închide</string>
    <string name="db_drive_found">Bază de date gasită în cloud!</string>
    <string name="db_drive_found_format">Am gasit o bază de date stocată în Google Drive,
        modficată ultima dată la: %s.</string>
    <string name="db_drive_not_found">Nu a fost gasită o bază de date în cloud!</string>
    <string name="db_not_found_drive_long">Nu a fost gasită nicio bază de date stocată pe Google
        Drive.</string>
    <string name="db_found_locally_format"> În schimb, există o bază de date stocată local care a
        fost modificată ultima dată la: %s.</string>
    <string name="db_not_found_locally"> În plus, pe dispozitivul actual nu s-a găsit nicio bază de
        date.</string>
    <string name="download_db_from_cloud">Descarcă baza din cloud</string>
    <string name="upload_db_in_cloud">Încarcă în cloud baza locală</string>
    <string name="sync">Sincronizează</string>
    <string name="sync_with_drive">Sincronizează cu Google Drive</string>
    <string name="upload_successful">Baza de date a fost încarcată cu succes în cloud!</string>
    <string name="upload_failed">Încărcarea în cloud a bazei de date a eșuat!</string>
    <string name="download_successful_auth">Baza de date din cloud a fost descărcată cu succes!
        Este necesară o nouă autentificare pentru a accesa-o.</string>
    <string name="download_failed">Descărcarea bazei de date din cloud a eșuat!</string>
    <string name="download_successful">Baza de date din cloud a fost descărcată cu succes!</string>
    <string name="title_activity_settings">Setări</string>
    <string name="settings">Setări</string>
    <string name="passwords_header">Parole</string>
    <string name="entry_plaintext_passwords_title">Afișează parole în format clar</string>
    <string name="entry_plaintext_passwords_summary">Afișează întotdeauna parolele din
        înregistrări în format clar, fară să fie nevoie de parola master pentru a le decripta.</string>
    <string name="entry_autodecrypt_setting">entry_plaintext_passwords_setting</string>
    <string name="session_expire_time_key">session_expire_time_key</string>
    <string name="session_expired">Sesiunea actuală a expirat. Este necesară o nouă autentificare.</string>
    <string name="session_expire_minutes_setting">session_expire_minutes_setting</string>
    <string name="session_expire_minutes_title">Minute expirare sesiune</string>
    <string name="session_expire_minutes_summary">Numărul de minute de inactivitate după care
        sesiunea expiră și este necesară o nouă autentificare.</string>
    <string name="no_internet_connection">Nu există conexiune la internet!</string>
    <string name="confirmation_download_db">Ești sigur că vrei să descarci baza de date de pe
        cloud? Bază de date locală va fi complet înlocuită.</string>
    <string name="download">Descarcă</string>
    <string name="confirmation_upload_db">Ești sigur că vrei să încarci baza de date locală pe
        Google Drive? Eventuala bază de date stocată în cloud va fi complet înlocuită!</string>
    <string name="upload">Încarcă</string>
    <string name="cancel">Închide</string>
    <string name="confirmation_download_db_title">Descarci baza din cloud?</string>
    <string name="confirmation_upload_db_title">Încarci baza locală în cloud?</string>
    <string name="loading">Se incarcă</string>
    <string name="category">Categorie</string>
    <string name="pass_gen_character_sets">Set de caractere pentru generarea parolei: </string>
    <string name="pass_gen_length">Lungimea parolei generate:</string>
    <string name="pass_gen_length_slider">Slider lungime parolă generată</string>
    <string name="entry_name_cannot_be_empty">Numele înregistrării nu poate fi gol!</string>
    <string name="pass_cannot_be_empty">Parola nu poate fi goală!</string>
    <string name="enter_master_password">Introdu parola master</string>
    <string name="enter_password_again">Introdu din nou parola</string>
    <string name="current_master_pass">Actuala parolă master</string>
    <string name="new_master_password">Noua parolă master</string>
    <string name="title_activity_update_masterpass">Schimbă parola master</string>
    <string name="modify_existing_category">Modifică o categorie existentă</string>
    <string name="title_activity_entry">Vizualizează o înregistrare</string>
    <string name="title_activity_auth">Password Manager</string>
    <string name="update_existing_entry">Modifică o înregistrare existentă</string>
    <string name="missing">lipsă</string>
    <string name="placeholder_entry_name">denumire întregistrare</string>
    <string name="description_placeholder">o descriere a înregistrării</string>
    <string name="placeholder_lastmodified">1 Jan 1970</string>
    <string name="placeholder_link">google.com</string>
    <string name="read_storage_permission_rationale">Este necesară permisiunea pentru a accesa imaginile de pe dispozitiv.</string>
    <string name="permission_not_granted_image">Nu se poate alege o imagine.</string>
    <string name="welcome">Bine ai venit.</string>
    <string name="login_prompt">Autentifică-te pentru a avea acces la parolele tale.</string>
    <string name="create_new_db">Creează o bază pentru parole.</string>
    <string name="choose_a_strong_pass">Nu uita să alegi o parolă puternică.</string>
</resources>