<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".CreateOrUpdateCategoryActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="@integer/category_name_max_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/chooseIconBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_icon" />

    <Button
        android:id="@+id/saveCategoryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_category" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitXY"
        android:minWidth="24dp"
        android:maxWidth="24dp"
        android:minHeight="24dp"
        android:maxHeight="24dp"
        android:contentDescription="@string/category_icon" />

</LinearLayout>